# ocmath

./: CMakeLists.txt  FindOcmath.cmake
src/: CMakeLists.txt  matrix.cpp  matrix.hpp  ocmath.cpp  ocmath.hpp  point3.cpp  point3.hpp  quaternion.cpp  quaternion.hpp  simd.hpp  transform.cpp  transform.hpp  vector.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp  vector_io.hpp
test/: CMakeLists.txt  main.cpp
